[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatialflow"
version = "0.2.0"
description = "Python SDK for SpatialFlow - Real-time geospatial automation platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SpatialFlow", email = "support@spatialflow.io" }
]
keywords = ["spatialflow", "geospatial", "geofencing", "location", "automation", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "urllib3>=1.25.3,<3.0.0",
    "python-dateutil>=2.8.2",
    "aiohttp>=3.8.4",
    "aiohttp-retry>=2.8.3",
    "pydantic>=2.0.0",
    "typing-extensions>=4.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "aioresponses>=0.7.4",  # Mock aiohttp requests
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://spatialflow.io"
Documentation = "https://docs.spatialflow.io/sdk/python"
Repository = "https://github.com/spatialflow-io/spatialflow-python"
Issues = "https://github.com/spatialflow-io/spatialflow-python/issues"
Changelog = "https://github.com/spatialflow-io/spatialflow-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/spatialflow"]
# Exclude generated scaffolding from wheel (keep only Python code)
exclude = [
    # OpenAPI generator scaffolding
    "**/.openapi-generator*",
    "**/git_push.sh",
    # Generated docs (not needed at runtime)
    "**/docs/**",
    # CI/CD configs
    "**/.github/**",
    "**/.gitlab-ci.yml",
    "**/.travis.yml",
    "**/tox.ini",
    # Build configs (use root pyproject.toml instead)
    "src/spatialflow/_generated/pyproject.toml",
    "src/spatialflow/_generated/setup.py",
    "src/spatialflow/_generated/setup.cfg",
    "src/spatialflow/_generated/requirements.txt",
    "src/spatialflow/_generated/test-requirements.txt",
    # Generated README (we have our own)
    "src/spatialflow/_generated/README.md",
    # Git ignores
    "**/.gitignore",
    "**/.spec-hash",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]
exclude = [
    # Same exclusions for sdist
    "**/.openapi-generator*",
    "**/git_push.sh",
    "**/docs/**",
    "**/.github/**",
    "**/.gitlab-ci.yml",
    "**/.travis.yml",
    "**/tox.ini",
    "src/spatialflow/_generated/pyproject.toml",
    "src/spatialflow/_generated/setup.py",
    "src/spatialflow/_generated/setup.cfg",
    "src/spatialflow/_generated/requirements.txt",
    "src/spatialflow/_generated/test-requirements.txt",
    "src/spatialflow/_generated/README.md",
    "**/.gitignore",
    "**/.spec-hash",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=spatialflow --cov-report=term-missing"
